--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,68 @@
 appnope==0.1.0
-asgiref==3.2.3
-astroid==2.3.2
+asgiref==3.2.7
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.4
-cffi==1.13.2
-cltk==0.1.113
+click==7.1.1
 cycler==0.10.0
-decorator==4.4.1
+decorator==4.4.2
 defusedxml==0.6.0
-Django==3.0.4
+Django==3.0.7
 entrypoints==0.3
-gitdb2==2.0.6
-GitPython==3.0.5
-imageio==2.6.1
-importlib-metadata==1.2.0
-ipykernel==5.1.3
-ipython==7.10.1
+ipykernel==5.2.1
+ipython==7.13.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-isort==4.3.21
-jedi==0.15.1
-Jinja2==2.10.3
+jedi==0.17.0
+Jinja2==2.11.2
+joblib==0.14.1
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.0.0
-jupyter-core==4.6.1
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.6.3
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+kiwisolver==1.2.0
+lxml==4.5.0
 MarkupSafe==1.1.1
-matplotlib==3.1.1
-mccabe==0.6.1
+matplotlib==3.2.1
 mistune==0.8.4
-more-itertools==8.0.2
 nbconvert==5.6.1
-nbformat==4.4.0
-nltk==3.4.5
-notebook==6.0.2
-numpy==1.17.4
+nbformat==5.0.5
+nltk==3.5
+notebook==6.0.3
+numpy==1.18.2
+pandas==1.0.3
 pandocfilters==1.4.2
-parso==0.5.1
-pexpect==4.7.0
+parso==0.7.0
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.1.0
 prometheus-client==0.7.1
-prompt-toolkit==2.0.10
+prompt-toolkit==3.0.5
 ptyprocess==0.6.0
-pycparser==2.19
-Pygments==2.5.2
-pylint==2.4.3
-pyparsing==2.4.2
-pyrsistent==0.15.6
-python-crfsuite==0.9.6
-python-dateutil==2.8.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
 pytz==2019.3
-pyuca==1.2
-PyYAML==5.2
-pyzmq==18.1.1
-qtconsole==4.6.0
-regex==2019.12.20
-scipy==1.3.2
+PyYAML==5.3.1
+pyzmq==19.0.0
+qtconsole==4.7.3
+QtPy==1.9.0
+regex==2020.4.4
 Send2Trash==1.5.0
-six==1.12.0
-smmap2==2.0.5
-sounddevice==0.3.14
-sqlparse==0.3.0
+six==1.14.0
+sqlparse==0.3.1
+tabulate==0.8.7
 terminado==0.8.3
 testpath==0.4.4
-tornado==6.0.3
+tornado==6.0.4
+tqdm==4.45.0
 traitlets==4.3.3
-typed-ast==1.4.0
-wcwidth==0.1.7
+wcwidth==0.1.9
 webencodings==0.5.1
-Whoosh==2.7.4
 widgetsnbextension==3.5.1
-wrapt==1.11.2
-zipp==0.6.0
